--- a/WFA210218/WFA210218.csproj
+++ b/WFA210218/WFA210218.csproj
@@ -52,10 +52,19 @@
     <Compile Include="FrmMain.Designer.cs">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmUjTanulo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmUjTanulo.Designer.cs">
+      <DependentUpon>FrmUjTanulo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmUjTanulo.resx">
+      <DependentUpon>FrmUjTanulo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
